--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -22,3 +22,23 @@ dataSources:
         - event: LendGivenPrincipal(indexed address,indexed address,uint256,indexed uint256,uint24,address,address,bool,uint256,uint256)
           handler: handleLendGivenPrincipal
       file: ./src/timeswap-v-2-periphery-uniswap-v-3-lend-given-principal.ts
+templates:
+- name: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
+  kind: ethereum/contract
+  network: matic
+  source:
+    abi: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
+  mapping:
+    kind: ethereum/events
+    apiVersion: 0.0.7
+    language: wasm/assemblyscript
+    entities:
+      - BorrowGivenPrincipal
+    abis:
+      - name: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
+        file: ./abis/TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal.json
+    eventHandlers:
+      - event: BorrowGivenPrincipal(indexed address,indexed address,uint256,indexed uint256,uint24,address,address,address,bool,bool,uint256,uint256)
+        handler: handleBorrowGivenPrincipal
+    file: ./src/timeswap-v-2-periphery-uniswap-v-3-borrow-given-principal.ts
+
