--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,7 +4,7 @@ schema:
 dataSources:
   - kind: ethereum
     name: TimeswapV2PeripheryUniswapV3LendGivenPrincipal
-    network: matic
+    network: arbitrum-one
     source:
       address: "0xb0EB735B0246bB11Fb57DB28DF5370D72C153314"
       abi: TimeswapV2PeripheryUniswapV3LendGivenPrincipal
@@ -22,23 +22,25 @@ dataSources:
         - event: LendGivenPrincipal(indexed address,indexed address,uint256,indexed uint256,uint24,address,address,bool,uint256,uint256)
           handler: handleLendGivenPrincipal
       file: ./src/timeswap-v-2-periphery-uniswap-v-3-lend-given-principal.ts
-templates:
-- name: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
-  kind: ethereum/contract
-  network: matic
-  source:
-    abi: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
-  mapping:
-    kind: ethereum/events
-    apiVersion: 0.0.7
-    language: wasm/assemblyscript
-    entities:
-      - BorrowGivenPrincipal
-    abis:
-      - name: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
-        file: ./abis/TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal.json
-    eventHandlers:
-      - event: BorrowGivenPrincipal(indexed address,indexed address,uint256,indexed uint256,uint24,address,address,address,bool,bool,uint256,uint256)
-        handler: handleBorrowGivenPrincipal
-    file: ./src/timeswap-v-2-periphery-uniswap-v-3-borrow-given-principal.ts
+  - kind: ethereum
+    name: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
+    network: arbitrum-one
+    source:
+      address: "0x7f7B71d60027aEE523FFfac9cC17ebF7915f1d02"
+      abi: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
+      startBlock: 39476364
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - BorrowGivenPrincipal
+      abis:
+        - name: TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal
+          file: ./abis/TimeswapV2PeripheryUniswapV3BorrowGivenPrincipal.json
+      eventHandlers:
+        - event: BorrowGivenPrincipal(indexed address,indexed address,uint256,indexed uint256,uint24,address,address,address,bool,bool,uint256,uint256)
+          handler: handleBorrowGivenPrincipal
+      file: ./src/timeswap-v-2-periphery-uniswap-v-3-borrow-given-principal.ts
+
 
